--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       Google Fonts
     -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Montserrat:wght@300;400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <!--
